--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <link rel="author" href="https://plus.google.com/113269272073387208192">
-        <link rel="stylesheet" href="assets/css/global.css">
+        <!-- link rel="stylesheet" href="assets/css/global.css" -->
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat%3A400%2C700'>
         <link rel='stylesheet' href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
     </head>
