--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <main role="main">
             <section class="project">
                 <a href="">
-                    <h2>The living list</h2>
+                    <h2></h2>
                 </a>
             </section>
         </main>
         <footer role="contentinfo">
-            This project can all be found on <a href="http://github.com/cityandwool/goodideas/" title="GitHub">GitHub</a>
+            <a href="http://github.com/cityandwool/goodideas/" title="GitHub">Good ideas on GitHub</a>
         </footer>
         <script src="assets/js/inc/get-posts.js"></script>
     </body>
